--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,9 @@
-# Core Data Science Libraries
-pandas>=1.5.0,<2.2.0
-numpy>=1.21.0,<1.26.0
-scikit-learn>=1.2.0,<1.4.0
-matplotlib>=3.5.0,<3.8.0
-seaborn>=0.11.0,<0.13.0
-plotly>=5.10.0,<5.18.0
-joblib>=1.2.0,<1.4.0
-
-# Streamlit for Web Application
-streamlit>=1.25.0,<1.29.0
-
-# Additional Processing Libraries
-openpyxl>=3.0.0,<3.2.0
-xlsxwriter>=3.0.0,<3.2.0
-
-# Scientific Computing
-scipy>=1.9.0,<1.12.0
-
-# Date/Time Processing
-python-dateutil>=2.8.0
-pytz>=2022.1
-
-# Additional required libraries for deployment
-pillow>=9.0.0
-requests>=2.25.0
+# Optimized for Hugging Face Spaces deployment
+streamlit==1.28.1
+pandas==2.0.3
+numpy==1.24.3
+scikit-learn==1.3.0
+plotly==5.15.0
+joblib==1.3.1
+seaborn==0.12.2
+matplotlib==3.7.2
